# webdriverbidi

./: Cargo.toml  README.md
cddl/: all.cddl  local.cddl  remote.cddl
examples/: basic.rs  history.rs
src/: command_sender.rs  error.rs  events.rs  lib.rs  message_handler.rs  model.rs  session.rs
src/commands/: browser.rs  browsing_context.rs  emulation.rs  id.rs  input.rs  network.rs  script.rs  session.rs  storage.rs  utils.rs  web_extension.rs
src/model/: browser.rs  browsing_context.rs  command.rs  common.rs  emulation.rs  error.rs  event.rs  input.rs  log.rs  message.rs  network.rs  result.rs  script.rs  session.rs  storage.rs  web_extension.rs
src/webdriver/: capabilities.rs  session.rs
static/: test_keeps_element_focused.html  test_multiple_activation.html
tests/: browser.rs  browsing_context.rs  utils.rs  web_extension.rs
